--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -1,10 +1,8 @@
 spring:
-  profiles:
-    active: docker
   application:
     name: emp-dept-management
   datasource:
-    url: jdbc:mysql://localhost:3306/employee-department
+    url: jdbc:mysql://host.docker.internal:3306/employee-department
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,6 +16,4 @@ spring:
     show-sql: true
 
 server:
-  port: 8084
-
-
+  port: 8080
